--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>PytelWeb</title>
-  <base href="/">
+  <base href="/pytel/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.392b35f362740064a41e.css"></head>
+<link rel="stylesheet" href="styles.3e2657e38011a2638425.css"></head>
 <body>
   <pytel-root></pytel-root>
 
 
-<script type="text/javascript" src="runtime.b867d3dc9e21e250f6b4.js"></script><script type="text/javascript" src="polyfills.dc4d66564e06abcc14bf.js"></script><script type="text/javascript" src="main.31c953fbdbba0af498c9.js"></script></body></html>
+<script type="text/javascript" src="runtime.2fa166f4b48411a90f7e.js"></script><script type="text/javascript" src="polyfills.46d731204c71e1e1b982.js"></script><script type="text/javascript" src="main.a831dc5f567bc2805fb3.js"></script></body></html>
