--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,44 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.21d09c666cc1394b1f2e.css"></head>
-<body>
+<link rel="stylesheet" href="styles.dca45c6d70b7a94f80f1.css"></head>
+<body id="body">
   <pytel-root></pytel-root>
 
+<script type="application/javascript">
+    // get iframes in parent
+    var iframes = window.parent.document.getElementsByTagName('iframe');
+
+    // got one?
+    if (iframes.length > 0) {
+        // get it
+        var iframe = iframes.item(0);
+
+        // get body and its height
+        var body = document.getElementById('body');
+        var lastHeight = body.clientHeight;
+
+        // method for checking for changes
+        function checkForChanges()
+        {
+            // did it change?
+            if (body.clientHeight !== lastHeight)
+            {
+                // store body height
+                lastHeight = body.clientHeight;
+
+                // set height
+                iframe.height = lastHeight + 20 + "px";
+
+            }
+
+            // schedule next check
+            setTimeout(checkForChanges, 100);
+        }
+
+        // call it
+        checkForChanges();
+    }
+</script>
 
 <script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.855594eee79c1e137f56.js"></script><script type="text/javascript" src="main.3602b795ae829ed5d6e0.js"></script></body></html>
