--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PytelWeb</title>
-  <base href="/pytel/">
+  <title>PyObsWeb</title>
+  <base href="/pyobs/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body id="body">
-  <pytel-root></pytel-root>
+  <pyobs-root></pyobs-root>
 </body>
 <script type="application/javascript">
     // get iframes in parent
